# FastFHIR

./: .gitignore  CMakeLists.txt  Development.ipynb  FF_Primatives.cpp  FF_Primatives.hpp  LICENSE  README.md  architecture.md  compaction_python.prompt.md  ffc.py  ffd.py  make_lib.py  project_progress.prompt.md
.github/prompts/: WASM_extensions.prompt.md  architecture.md  compactor.prompt.md  ingestion.md  recovery_rev.prompt.md  refactor_node.prompt.md
FastFHIR.xcodeproj/: project.pbxproj
FastFHIR.xcodeproj/project.xcworkspace/xcuserdata/RyanLandvater.xcuserdatad/: UserInterfaceState.xcuserstate
FastFHIR.xcodeproj/xcuserdata/RyanLandvater.xcuserdatad/xcschemes/: xcschememanagement.plist
generator/: make_lib.py
include/: FF_Allocator.hpp  FF_Builder.hpp  FF_Compactor.hpp  FF_Extensions.hpp  FF_Ingestor.hpp  FF_Logger.hpp  FF_Memory.hpp  FF_Ops.hpp  FF_Parser.hpp  FF_Primatives.hpp  FF_Primitives.hpp  FF_Queue.hpp  FF_SIMD.hpp  FF_UrlHash.hpp  FF_Utilities.hpp  FF_utilities.hpp  FastFHIR.hpp
python/: FF_PythonBindings.cpp  README.md
python/fastfhir/: __init__.py
src/: FF_Allocator.cpp  FF_Builder.cpp  FF_Compactor.cpp  FF_Extensions.cpp  FF_Ingestor.cpp  FF_Memory.cpp  FF_Parser.cpp  FF_Primatives.cpp  FF_Primitives.cpp  ffc.py  ffd.py
tests/cpp/: test_readme.cpp
tests/python/: conftest.py  test_long_array_queue.py  test_readme.py
tools/compactor/: FF_Compact.cpp
tools/exporter/: FF_Export.cpp
tools/generator/: fetch_specs.py  ffc.py  ffcs.py  ffd.py  make_lib.py
tools/ingestor/: FF_Ingest.cpp
tools/python/: FF_PythonBindings.cpp  FF_PythonBuilder.hpp  FF_PythonIngestor.hpp  FF_PythonParser.hpp
tools/python/fastfhir/: __init__.py  builder.py  ingestor.py  parser.py
xcode/: bundle.ff
